// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with black text 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(Text)
    style={
      Array [
        Object {
          "fontWeight": "bold",
          "marginRight": 12.5,
        },
        Object {
          "color": "black",
        },
      ]
    }
  >
    EN
  </Styled(Text)>
</TouchableOpacity>
`;

exports[`renders with white text 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(Text)
    style={
      Array [
        Object {
          "fontWeight": "bold",
          "marginRight": 12.5,
        },
        Object {
          "color": "white",
        },
      ]
    }
  >
    EN
  </Styled(Text)>
</TouchableOpacity>
`;
